5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1773_2185.log
== TEST (2019-05-27 22:57:22) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
i = 0
copy = ""
while(i<len(string)):
	if(string[-1] == 1):
		copy = copy + "Um"
	if(string[-1] == 2):
		copy = copy + "Dois"
	if(String[-1] == 3):
		copy = copy + "Treis"
	if(string[-1] == 4):
		copy = copy + "Quatro"
	if(string[-1] == 5):
		copy = copy + "Cinco"
	if(String[-1] == 6):
		copy = copy + "Seis"
	if(string[-1] == 7):
		copy = copy + "Sete"
	if(string[-1] == 8):
		copy = copy + "Oito"
	if(String[-1] == 9):
		copy = copy + "Nove"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:57:37) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
i = 0
copy = ""
while(i<len(string)):
	if(string[-1] == 1):
		copy = copy + "Um"
	if(string[-1] == 2):
		copy = copy + "Dois"
	if(String[-1] == 3):
		copy = copy + "Treis"
	if(string[-1] == 4):
		copy = copy + "Quatro"
	if(string[-1] == 5):
		copy = copy + "Cinco"
	if(String[-1] == 6):
		copy = copy + "Seis"
	if(string[-1] == 7):
		copy = copy + "Sete"
	if(string[-1] == 8):
		copy = copy + "Oito"
	if(String[-1] == 9):
		copy = copy + "Nove"
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:57:56) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
i = 0
copy = ""
while(i<len(string)):
	if(string[-1] == 1):
		copy = copy + "Um"
	if(string[-1] == 2):
		copy = copy + "Dois"
	if(string[-1] == 3):
		copy = copy + "Treis"
	if(string[-1] == 4):
		copy = copy + "Quatro"
	if(string[-1] == 5):
		copy = copy + "Cinco"
	if(string[-1] == 6):
		copy = copy + "Seis"
	if(string[-1] == 7):
		copy = copy + "Sete"
	if(string[-1] == 8):
		copy = copy + "Oito"
	if(string[-1] == 9):
		copy = copy + "Nove"
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:58:21) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
i = 0
copy = ""
while(i<len(string)):
	if(string[0] == 1):
		copy = copy + "Um"
	if(string[-1] == 2):
		copy = copy + "Dois"
	if(string[-1] == 3):
		copy = copy + "Treis"
	if(string[-1] == 4):
		copy = copy + "Quatro"
	if(string[-1] == 5):
		copy = copy + "Cinco"
	if(string[-1] == 6):
		copy = copy + "Seis"
	if(string[-1] == 7):
		copy = copy + "Sete"
	if(string[-1] == 8):
		copy = copy + "Oito"
	if(string[-1] == 9):
		copy = copy + "Nove"
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:58:34) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
i = 0
copy = ""
while(i<len(string)):
	if(string[-1] == "1"):
		copy = copy + "Um"
	if(string[-1] == 2):
		copy = copy + "Dois"
	if(string[-1] == 3):
		copy = copy + "Treis"
	if(string[-1] == 4):
		copy = copy + "Quatro"
	if(string[-1] == 5):
		copy = copy + "Cinco"
	if(string[-1] == 6):
		copy = copy + "Seis"
	if(string[-1] == 7):
		copy = copy + "Sete"
	if(string[-1] == 8):
		copy = copy + "Oito"
	if(string[-1] == 9):
		copy = copy + "Nove"
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:54:41) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
i = 0
copy = ""
while(i<len(string)):
	if(len(string) == 1):
		if(string[-1] == "1"):
			copy = copy + "Um"
		if(string[-1] == "2"):
			copy = copy + "Dois"
		if(string[-1] == "3"):
			copy = copy + "Treis"
		if(string[-1] == "4"):
			copy = copy + "Quatro"
		if(string[-1] == "5"):
			copy = copy + "Cinco"
		if(string[-1] == "6"):
			copy = copy + "Seis"
		if(string[-1] == "7"):
			copy = copy + "Sete"
		if(string[-1] == "8"):
			copy = copy + "Oito"
		if(string[-1] == "9"):
			copy = copy + "Nove"
		if(string[-1] == "0"):
			copy = copy + "Zero" 
	if(len(string) == 2):
		if(string[-1] == "0" and string[-2] == "1"):
			copy = copy + "Dez"
		if(string[-1] == "1" and string[-2] == "1"):
			copy = copy + "Onze"
		if(string[-1] == "2" and string[-2] == "1"):
			copy = copy + "Doze"
		if(string[-1] == "3" and string[-2] == "1"):
			copy = copy + "Treze"
		if(string[-1] == "4" and string[-2] == "1"):
			copy = copy + "Quatorze"
		if(string[-1] == "5" and string[-2] == "1"):
			copy = copy + "Quinze"
		if(string[-1] == "6" and string[-2] == "1"):
			copy = copy + "Dezesseis"
		if(string[-1] == "7" and string[-2] == "1"):
			copy = copy + "Dezessete"
		if(string[-1] == "8" and string[-2] == "1"):
			copy = copy + "Dezoito"
		if(string[-1] == "9" and string[-2] == "1"):
			copy = copy + "Dezenove"
		
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:23:49) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
i = 0
copy = ""
while(i<len(string)):
	if(len(string) == 1):
		if(string[-1] == "1"):
			copy = copy + "Um"
		if(string[-1] == "2"):
			copy = copy + "Dois"
		if(string[-1] == "3"):
			copy = copy + "Treis"
		if(string[-1] == "4"):
			copy = copy + "Quatro"
		if(string[-1] == "5"):
			copy = copy + "Cinco"
		if(string[-1] == "6"):
			copy = copy + "Seis"
		if(string[-1] == "7"):
			copy = copy + "Sete"
		if(string[-1] == "8"):
			copy = copy + "Oito"
		if(string[-1] == "9"):
			copy = copy + "Nove"
		if(string[-1] == "0"):
			copy = copy + "Zero" 
	if(len(string) == 2):
		if(string[-1] == "0" and string[-2] == "1"):
			copy = copy + "Dez"
		if(string[-1] == "1" and string[-2] == "1"):
			copy = copy + "Onze"
		if(string[-1] == "2" and string[-2] == "1"):
			copy = copy + "Doze"
		if(string[-1] == "3" and string[-2] == "1"):
			copy = copy + "Treze"
		if(string[-1] == "4" and string[-2] == "1"):
			copy = copy + "Quatorze"
		if(string[-1] == "5" and string[-2] == "1"):
			copy = copy + "Quinze"
		if(string[-1] == "6" and string[-2] == "1"):
			copy = copy + "Dezesseis"
		if(string[-1] == "7" and string[-2] == "1"):
			copy = copy + "Dezessete"
		if(string[-1] == "8" and string[-2] == "1"):
			copy = copy + "Dezoito"
		if(string[-1] == "9" and string[-2] == "1"):
			copy = copy + "Dezenove"
		else:
			copy = copy + ""
		
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:35:41) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(string[-1] == "0"):
	copy = copy  + "Zero"
if(string[-1] == "1"):
	copy = copy  + "Um"
if(string[-1] == "2"):
	copy = copy  + "Dois"
if(string[-1] == "3"):
	copy = copy  + "Treis"
if(string[-1] == "4"):
	copy = copy  + "Quatro"
if(string[-1] == "5"):
	copy = copy  + "Cinco"
if(string[-1] == "6"):
	copy = copy  + "Seis"
if(string[-1] == "7"):
	copy = copy  + "Sete"
if(string[-1] == "8"):
	copy = copy  + "Oito"
if(string[-1] == "9"):
	copy = copy  + "Nove"
print(copy)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:35:45) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(string[-1] == "0"):
	copy = copy  + "Zero"
if(string[-1] == "1"):
	copy = copy  + "Um"
if(string[-1] == "2"):
	copy = copy  + "Dois"
if(string[-1] == "3"):
	copy = copy  + "Treis"
if(string[-1] == "4"):
	copy = copy  + "Quatro"
if(string[-1] == "5"):
	copy = copy  + "Cinco"
if(string[-1] == "6"):
	copy = copy  + "Seis"
if(string[-1] == "7"):
	copy = copy  + "Sete"
if(string[-1] == "8"):
	copy = copy  + "Oito"
if(string[-1] == "9"):
	copy = copy  + "Nove"
print(copy)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:37:55) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(string[-1] == "0"):
	copy = copy  + "Zero"
if(string[-1] == "1"):
	copy = copy  + "Um"
if(string[-1] == "2"):
	copy = copy  + "Dois"
if(string[-1] == "3"):
	copy = copy  + "Treis"
if(string[-1] == "4"):
	copy = copy  + "Quatro"
if(string[-1] == "5"):
	copy = copy  + "Cinco"
if(string[-1] == "6"):
	copy = copy  + "Seis"
if(string[-1] == "7"):
	copy = copy  + "Sete"
if(string[-1] == "8"):
	copy = copy  + "Oito"
if(string[-1] == "9"):
	copy = copy  + "Nove"
if(string[-1] == "0" and string[-2] == "1"):
	copy = copy  + "Dez"
if(string[-1] == "1"):
	copy = copy  + "Onze"
if(string[-1] == "2"):
	copy = copy  + "Doze"
if(string[-1] == "3"):
	copy = copy  + "Treze"
if(string[-1] == "4"):
	copy = copy  + "Quatorze"
if(string[-1] == "5"):
	copy = copy  + "Quinze"
if(string[-1] == "6"):
	copy = copy  + "Dezesseis"
if(string[-1] == "7"):
	copy = copy  + "Dezessete"
if(string[-1] == "8"):
	copy = copy  + "Dezoito"
if(string[-1] == "9"):
	copy = copy  + "Dezenove"

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:38:02) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(string[-1] == "0"):
	copy = copy  + "Zero"
if(string[-1] == "1"):
	copy = copy  + "Um"
if(string[-1] == "2"):
	copy = copy  + "Dois"
if(string[-1] == "3"):
	copy = copy  + "Treis"
if(string[-1] == "4"):
	copy = copy  + "Quatro"
if(string[-1] == "5"):
	copy = copy  + "Cinco"
if(string[-1] == "6"):
	copy = copy  + "Seis"
if(string[-1] == "7"):
	copy = copy  + "Sete"
if(string[-1] == "8"):
	copy = copy  + "Oito"
if(string[-1] == "9"):
	copy = copy  + "Nove"
if(string[-1] == "0" and string[-2] == "1"):
	copy = copy  + "Dez"
if(string[-1] == "1"):
	copy = copy  + "Onze"
if(string[-1] == "2"):
	copy = copy  + "Doze"
if(string[-1] == "3"):
	copy = copy  + "Treze"
if(string[-1] == "4"):
	copy = copy  + "Quatorze"
if(string[-1] == "5"):
	copy = copy  + "Quinze"
if(string[-1] == "6"):
	copy = copy  + "Dezesseis"
if(string[-1] == "7"):
	copy = copy  + "Dezessete"
if(string[-1] == "8"):
	copy = copy  + "Dezoito"
if(string[-1] == "9"):
	copy = copy  + "Dezenove"
print(copy)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:03) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(string[-1] == "0"):
	copy = copy  + "Zero"
if(string[-1] == "1"):
	copy = copy  + "Um"
if(string[-1] == "2"):
	copy = copy  + "Dois"
if(string[-1] == "3"):
	copy = copy  + "Treis"
if(string[-1] == "4"):
	copy = copy  + "Quatro"
if(string[-1] == "5"):
	copy = copy  + "Cinco"
if(string[-1] == "6"):
	copy = copy  + "Seis"
if(string[-1] == "7"):
	copy = copy  + "Sete"
if(string[-1] == "8"):
	copy = copy  + "Oito"
if(string[-1] == "9"):
	copy = copy  + "Nove"
if(string[-1] == "0" and string[-2] == "1"):
	copy = copy  + "Dez"
if(string[-1] == "1"):
	copy = copy  + "Onze"
if(string[-1] == "2"):
	copy = copy  + "Doze"
if(string[-1] == "3"):
	copy = copy  + "Treze"
if(string[-1] == "4"):
	copy = copy  + "Quatorze"
if(string[-1] == "5"):
	copy = copy  + "Quinze"
if(string[-1] == "6"):
	copy = copy  + "Dezesseis"
if(string[-1] == "7"):
	copy = copy  + "Dezessete"
if(string[-1] == "8"):
	copy = copy  + "Dezoito"
if(string[-1] == "9"):
	copy = copy  + "Dezenove"
print(copy)

		
-- EXECUTION TIME:
0.57507
-- TEST CASE 1:
---- input:
212
---- correct output:
duzentos e doze
---- user output:
DoisDoze
-- TEST CASE 2:
---- input:
9234
---- correct output:
nove mil e duzentos e trinta e quatro
---- user output:
digite o numero: QuatroQuatorze
-- TEST CASE 3:
---- input:
34
---- correct output:
trinta e quatro
---- user output:
digite o numero: QuatroQuatorze
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:40:55) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
elif(string[-1] == "0"):
	copy = copy  + "Zero"
elif(string[-1] == "1"):
	copy = copy  + "Um"
elif(string[-1] == "2"):
	copy = copy  + "Dois"
elif(string[-1] == "3"):
	copy = copy  + "Treis"
elif(string[-1] == "4"):
	copy = copy  + "Quatro"
elif(string[-1] == "5"):
	copy = copy  + "Cinco"
elif(string[-1] == "6"):
	copy = copy  + "Seis"
elif(string[-1] == "7"):
	copy = copy  + "Sete"
elif(string[-1] == "8"):
	copy = copy  + "Oito"
elif(string[-1] == "9"):
	copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2"):
		copy = copy  + "Doze"
	if(string[-1] == "3"):
		copy = copy  + "Treze"
	if(string[-1] == "4"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5"):
		copy = copy  + "Quinze"
	if(string[-1] == "6"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9"):
		copy = copy  + "Dezenove"
print(copy)

		
-- ERROR:
File "XXXX", line 5
    elif(string[-1] == "0"):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:31) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2"):
		copy = copy  + "Doze"
	if(string[-1] == "3"):
		copy = copy  + "Treze"
	if(string[-1] == "4"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5"):
		copy = copy  + "Quinze"
	if(string[-1] == "6"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9"):
		copy = copy  + "Dezenove"
print(copy)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:35) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2"):
		copy = copy  + "Doze"
	if(string[-1] == "3"):
		copy = copy  + "Treze"
	if(string[-1] == "4"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5"):
		copy = copy  + "Quinze"
	if(string[-1] == "6"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9"):
		copy = copy  + "Dezenove"
print(copy)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:48:49) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1" and string[-2] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2" and string[-2] == "1"):
		copy = copy  + "Doze"
	if(string[-1] == "3" and string[-2] == "1"):
		copy = copy  + "Treze"
	if(string[-1] == "4" and string[-2] == "1"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5" and string[-2] == "1"):
		copy = copy  + "Quinze"
	if(string[-1] == "6" and string[-2] == "1"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7" and string[-2] == "1"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8" and string[-2] == "1"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9" and string[-2] == "1"):
		copy = copy  + "Dezenove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "2"):
		copy = copy + "Vinte"
		if(string[-1] == "0"):
		copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + "e Um"
		if(string[-1] == "2"):
			copy = copy  + "e Dois"
		if(string[-1] == "3"):
			copy = copy  + "e Treis"
		if(string[-1] == "4"):
			copy = copy  + "e Quatro"
		if(string[-1] == "5"):
			copy = copy  + "e Cinco"
		if(string[-1] == "6"):
			copy = copy  + "e Seis"
		if(string[-1] == "7"):
			copy = copy  + "e Sete"
		if(string[-1] == "8"):
			copy = copy  + "e Oito"
		if(string[-1] == "9"):
			copy = copy  + "e Nove"

		
-- ERROR:
File "XXXX", line 49
    copy = copy  + ""
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:49:03) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1" and string[-2] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2" and string[-2] == "1"):
		copy = copy  + "Doze"
	if(string[-1] == "3" and string[-2] == "1"):
		copy = copy  + "Treze"
	if(string[-1] == "4" and string[-2] == "1"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5" and string[-2] == "1"):
		copy = copy  + "Quinze"
	if(string[-1] == "6" and string[-2] == "1"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7" and string[-2] == "1"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8" and string[-2] == "1"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9" and string[-2] == "1"):
		copy = copy  + "Dezenove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "2"):
		copy = copy + "Vinte"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + "e Um"
		if(string[-1] == "2"):
			copy = copy  + "e Dois"
		if(string[-1] == "3"):
			copy = copy  + "e Treis"
		if(string[-1] == "4"):
			copy = copy  + "e Quatro"
		if(string[-1] == "5"):
			copy = copy  + "e Cinco"
		if(string[-1] == "6"):
			copy = copy  + "e Seis"
		if(string[-1] == "7"):
			copy = copy  + "e Sete"
		if(string[-1] == "8"):
			copy = copy  + "e Oito"
		if(string[-1] == "9"):
			copy = copy  + "e Nove"

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:49:23) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1" and string[-2] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2" and string[-2] == "1"):
		copy = copy  + "Doze"
	if(string[-1] == "3" and string[-2] == "1"):
		copy = copy  + "Treze"
	if(string[-1] == "4" and string[-2] == "1"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5" and string[-2] == "1"):
		copy = copy  + "Quinze"
	if(string[-1] == "6" and string[-2] == "1"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7" and string[-2] == "1"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8" and string[-2] == "1"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9" and string[-2] == "1"):
		copy = copy  + "Dezenove"
	if(string[-1] == "1" and string[-2] == "2"):
		copy = copy + "Vinte"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + "e Um"
		if(string[-1] == "2"):
			copy = copy  + "e Dois"
		if(string[-1] == "3"):
			copy = copy  + "e Treis"
		if(string[-1] == "4"):
			copy = copy  + "e Quatro"
		if(string[-1] == "5"):
			copy = copy  + "e Cinco"
		if(string[-1] == "6"):
			copy = copy  + "e Seis"
		if(string[-1] == "7"):
			copy = copy  + "e Sete"
		if(string[-1] == "8"):
			copy = copy  + "e Oito"
		if(string[-1] == "9"):
			copy = copy  + "e Nove"

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:49:40) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1" and string[-2] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2" and string[-2] == "1"):
		copy = copy  + "Doze"
	if(string[-1] == "3" and string[-2] == "1"):
		copy = copy  + "Treze"
	if(string[-1] == "4" and string[-2] == "1"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5" and string[-2] == "1"):
		copy = copy  + "Quinze"
	if(string[-1] == "6" and string[-2] == "1"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7" and string[-2] == "1"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8" and string[-2] == "1"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9" and string[-2] == "1"):
		copy = copy  + "Dezenove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "2"):
		copy = copy + "Vinte"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + "e Um"
		if(string[-1] == "2"):
			copy = copy  + "e Dois"
		if(string[-1] == "3"):
			copy = copy  + "e Treis"
		if(string[-1] == "4"):
			copy = copy  + "e Quatro"
		if(string[-1] == "5"):
			copy = copy  + "e Cinco"
		if(string[-1] == "6"):
			copy = copy  + "e Seis"
		if(string[-1] == "7"):
			copy = copy  + "e Sete"
		if(string[-1] == "8"):
			copy = copy  + "e Oito"
		if(string[-1] == "9"):
			copy = copy  + "e Nove"
print(copy)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:50:00) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1" and string[-2] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2" and string[-2] == "1"):
		copy = copy  + "Doze"
	if(string[-1] == "3" and string[-2] == "1"):
		copy = copy  + "Treze"
	if(string[-1] == "4" and string[-2] == "1"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5" and string[-2] == "1"):
		copy = copy  + "Quinze"
	if(string[-1] == "6" and string[-2] == "1"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7" and string[-2] == "1"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8" and string[-2] == "1"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9" and string[-2] == "1"):
		copy = copy  + "Dezenove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "2"):
		copy = copy + "Vinte"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
print(copy)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:50:03) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1" and string[-2] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2" and string[-2] == "1"):
		copy = copy  + "Doze"
	if(string[-1] == "3" and string[-2] == "1"):
		copy = copy  + "Treze"
	if(string[-1] == "4" and string[-2] == "1"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5" and string[-2] == "1"):
		copy = copy  + "Quinze"
	if(string[-1] == "6" and string[-2] == "1"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7" and string[-2] == "1"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8" and string[-2] == "1"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9" and string[-2] == "1"):
		copy = copy  + "Dezenove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "2"):
		copy = copy + "Vinte"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
print(copy)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:58:40) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1" and string[-2] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2" and string[-2] == "1"):
		copy = copy  + "Doze"
	if(string[-1] == "3" and string[-2] == "1"):
		copy = copy  + "Treze"
	if(string[-1] == "4" and string[-2] == "1"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5" and string[-2] == "1"):
		copy = copy  + "Quinze"
	if(string[-1] == "6" and string[-2] == "1"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7" and string[-2] == "1"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8" and string[-2] == "1"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9" and string[-2] == "1"):
		copy = copy  + "Dezenove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "2"):
		copy = copy + "Vinte"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "3"):
		copy = copy + "Trinta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "4"):
		copy = copy + "Quarenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "5"):
		copy = copy + "Cinquenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "6"):
		copy = copy + "Sessenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "7"):
		copy = copy + "Setenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "8"):
		copy = copy + "Oitenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "9"):
		copy = copy + "Noventa"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:58:47) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1" and string[-2] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2" and string[-2] == "1"):
		copy = copy  + "Doze"
	if(string[-1] == "3" and string[-2] == "1"):
		copy = copy  + "Treze"
	if(string[-1] == "4" and string[-2] == "1"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5" and string[-2] == "1"):
		copy = copy  + "Quinze"
	if(string[-1] == "6" and string[-2] == "1"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7" and string[-2] == "1"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8" and string[-2] == "1"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9" and string[-2] == "1"):
		copy = copy  + "Dezenove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "2"):
		copy = copy + "Vinte"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "3"):
		copy = copy + "Trinta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "4"):
		copy = copy + "Quarenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "5"):
		copy = copy + "Cinquenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "6"):
		copy = copy + "Sessenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "7"):
		copy = copy + "Setenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "8"):
		copy = copy + "Oitenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "9"):
		copy = copy + "Noventa"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:59:24) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1" and string[-2] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2" and string[-2] == "1"):
		copy = copy  + "Doze"
	if(string[-1] == "3" and string[-2] == "1"):
		copy = copy  + "Treze"
	if(string[-1] == "4" and string[-2] == "1"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5" and string[-2] == "1"):
		copy = copy  + "Quinze"
	if(string[-1] == "6" and string[-2] == "1"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7" and string[-2] == "1"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8" and string[-2] == "1"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9" and string[-2] == "1"):
		copy = copy  + "Dezenove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "2"):
		copy = copy + "Vinte"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "3"):
		copy = copy + "Trinta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "4"):
		copy = copy + "Quarenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "5"):
		copy = copy + "Cinquenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "6"):
		copy = copy + "Sessenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "7"):
		copy = copy + "Setenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "8"):
		copy = copy + "Oitenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "9"):
		copy = copy + "Noventa"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:59:27) 
-- CODE:
from numpy import *
string = input("digite o numero: ")
copy = ""
if(len(string) == 1):
	if(string[-1] == "0"):
		copy = copy  + "Zero"
	if(string[-1] == "1"):
		copy = copy  + "Um"
	if(string[-1] == "2"):
		copy = copy  + "Dois"
	if(string[-1] == "3"):
		copy = copy  + "Treis"
	if(string[-1] == "4"):
		copy = copy  + "Quatro"
	if(string[-1] == "5"):
		copy = copy  + "Cinco"
	if(string[-1] == "6"):
		copy = copy  + "Seis"
	if(string[-1] == "7"):
		copy = copy  + "Sete"
	if(string[-1] == "8"):
		copy = copy  + "Oito"
	if(string[-1] == "9"):
		copy = copy  + "Nove"
else:	
	if(string[-1] == "0" and string[-2] == "1"):
		copy = copy  + "Dez"
	if(string[-1] == "1" and string[-2] == "1"):
		copy = copy  + "Onze"
	if(string[-1] == "2" and string[-2] == "1"):
		copy = copy  + "Doze"
	if(string[-1] == "3" and string[-2] == "1"):
		copy = copy  + "Treze"
	if(string[-1] == "4" and string[-2] == "1"):
		copy = copy  + "Quatorze"
	if(string[-1] == "5" and string[-2] == "1"):
		copy = copy  + "Quinze"
	if(string[-1] == "6" and string[-2] == "1"):
		copy = copy  + "Dezesseis"
	if(string[-1] == "7" and string[-2] == "1"):
		copy = copy  + "Dezessete"
	if(string[-1] == "8" and string[-2] == "1"):
		copy = copy  + "Dezoito"
	if(string[-1] == "9" and string[-2] == "1"):
		copy = copy  + "Dezenove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "2"):
		copy = copy + "Vinte"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "3"):
		copy = copy + "Trinta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "4"):
		copy = copy + "Quarenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "5"):
		copy = copy + "Cinquenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "6"):
		copy = copy + "Sessenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "7"):
		copy = copy + "Setenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "8"):
		copy = copy + "Oitenta"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
	if(string[-1] == "9","8","7","6","5","4","3","2","1","0" and string[-2] == "9"):
		copy = copy + "Noventa"
		if(string[-1] == "0"):
			copy = copy  + ""
		if(string[-1] == "1"):
			copy = copy  + " e Um"
		if(string[-1] == "2"):
			copy = copy  + " e Dois"
		if(string[-1] == "3"):
			copy = copy  + " e Treis"
		if(string[-1] == "4"):
			copy = copy  + " e Quatro"
		if(string[-1] == "5"):
			copy = copy  + " e Cinco"
		if(string[-1] == "6"):
			copy = copy  + " e Seis"
		if(string[-1] == "7"):
			copy = copy  + " e Sete"
		if(string[-1] == "8"):
			copy = copy  + " e Oito"
		if(string[-1] == "9"):
			copy = copy  + " e Nove"
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
